added new games in list

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="ui-layer">
             <div id="main-menu" class="screen active">
                 <h1 class="logo">NEON ARCADE</h1>
-                <p class="subtitle">7 CLASSIC GAMES • RETRO VIBES</p>
+                <p class="subtitle">9 CLASSIC GAMES • RETRO VIBES</p>
                 <div class="menu-options">
 
                     <button class="menu-btn" data-game="snake">
@@ -49,6 +49,14 @@
                     <button class="menu-btn" data-game="sudoku">
                         <div class="game-title">🧩 SUDOKU</div>
                         <div class="game-desc">Number puzzle</div>
+                    </button>
+                    <button class="menu-btn" data-game="breakout">
+                        <div class="game-title">🧱 BREAKOUT</div>
+                        <div class="game-desc">Smash bricks</div>
+                    </button>
+                    <button class="menu-btn" data-game="pong">
+                        <div class="game-title">🏓 PONG</div>
+                        <div class="game-desc">Classic duel</div>
                     </button>
                 </div>
             </div>
